Closed Bug 65010 Opened 25 years ago Closed 24 years ago

Japanese characters become garbage in file name text field when change an exist Japanese file name in broswer.

Categories

(Core :: Internationalization, defect)

Other
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: amyy, Assigned: shanjian)

References

Details

(Keywords: intl)

Attachments

(2 files)

After you opened an exist Japanese file, and try to change the Japanese file name by go [File]|[Save as], Japanese characters become garbage in file name text field. 01-09-2001 Mtrunk build: Steps to reproduce: 1. Open browser. 2. Open an exist Japanese file(e.g. html file). 3. Go [File]|[Save as] in case if you want to change this file name. Result: It shows garbage in file name text field in "Save File" dialog. Notes: I found this problem when I verify bug 60941, that filepicker issue has been resolved though.
Change QA contact, add the keywords.
Keywords: intl, nsbeta1
QA Contact: teruko → ylong
Looks like bug 44353
This is not filepicker issue. Because Windows filepicker check whether file exists, and if file does not exist, it does not set filename. But XUL filepicker does not check... Probably, browser will set wrong leafname to filepicker....
ylong, was this introduced by bug 60941 or can be seen with 6.0 RTM?
I mean, was this introduced by the fix of bug 60941?
With RTM-ja, you will see the filepicker issue (bug 60943 or 60941), but when you try to change the page name by go [File]|[Save as], there is a "\" in text field of file name instead of the exist Japanese file name, so I'd say it doesn't exist in TRM-ja.
Reassign to bstell.
Assignee: nhotta → bstell
I did not research on this problem since it happens on HP and is an important bug for OEM vendors. The problem was caused by some code in nsStreamTransfer.cpp. I am working on a fix. Brian, you can reassign the bug to me.
Blocks: 52139
Attached patch proposed fixSplinter Review
re-assigning to Shanjain. Perhaps Frank can review this.
Assignee: bstell → shanjian
Status: NEW → ASSIGNED
Bill Law wrote: Yes, I've reviewed it and it is OK with the exception of the change to the argument on the call to GetStringFromName. That definitely should remain unchanged, as you noted. As bill pointed out, line around 258 should not be changed, otherwise it will break string association for localization.
Please fix the problems, test it, and attach a new patch. Thanks!
New patch has been attached. It has been tested.
sr=erik
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Fixed verified on 02-16 Mtrunk build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: