bug 65010 Japanese file name become garbage in file name text field ... r = bill law sr = erik.